--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FUNShareConnection": "Data Source=192.168.31.93;Initial Catalog=FUNShare;Persist Security Info=True;User ID=FUNShareDB;Password=987654321;TrustServerCertificate=true;"
-
+     "FUNShareConnection": "Data Source=192.168.31.93;Initial Catalog=FUNShare;Persist Security Info=True;User ID=FUNShareDB;Password=987654321;TrustServerCertificate=true;",
+   // "FUNShareConnection": "Data Source=.;Initial Catalog=FUNShare;Integrated Security=True;TrustServerCertificate=true;"
   }
 }
